--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:E:/Learnings/H2/week02/db
 spring.datasource.username=fardeen
 spring.datasource.password=fardeen@123
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
